--- a/pixi.toml
+++ b/pixi.toml
@@ -6,6 +6,10 @@ version = "0.1.0"
 
 [tasks]
 build = "colcon build --symlink-install"
+bridge = "ros2 launch rosbridge_server rosbridge_websocket_launch.xml"
+
+[activation]
+scripts = ["install/setup.sh"]
 
 [dependencies]
 ros-jazzy-desktop = ">=0.11.0,<0.12"
