--- a/software/ros_ws/src/robot/package.xml
+++ b/software/ros_ws/src/robot/package.xml
@@ -13,6 +13,7 @@
   <exec_depend>opencv-python</exec_depend>
   <exec_depend>pyfakewebcam</exec_depend>
   <exec_depend>gpiozero</exec_depend>
+  <exec_depend>robot_interfaces</exec_depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
