--- a/pixi.toml
+++ b/pixi.toml
@@ -24,3 +24,4 @@ pyfakewebcam = ">=0.1.0, <0.2"
 opencv-python = "*"
 gpiozero = ">=2.0.1, <3"
 lgpio = ">=0.2.2.0, <0.3"
+smbus = ">=1.1.post2, <2"
