--- a/pixi.toml
+++ b/pixi.toml
@@ -18,6 +18,7 @@ colcon-common-extensions = ">=0.3.0,<0.4"
 setuptools = "<=58.2.0"
 pkg-config = ">=0.29.2,<0.30"
 ros-jazzy-rosbridge-suite = ">=2.1.0,<3"
+scipy = ">=1.16.2,<2"
 
 [pypi-dependencies]
 pyfakewebcam = ">=0.1.0, <0.2"
@@ -25,3 +26,5 @@ opencv-python = "*"
 gpiozero = ">=2.0.1, <3"
 lgpio = ">=0.2.2.0, <0.3"
 smbus = ">=1.1.post2, <2"
+mpu6050-raspberrypi = ">=1.2, <2"
+mpu6050 = ">=0.0.3, <0.0.4"
