--- a/pixi.toml
+++ b/pixi.toml
@@ -33,3 +33,5 @@ lgpio = ">=0.2.2.0, <0.3"
 smbus = ">=1.1.post2, <2"
 mpu6050-raspberrypi = ">=1.2, <2"
 mpu6050 = ">=0.0.3, <0.0.4"
+piicodev = ">=1.10.3, <2"
+mpu6050-pi = ">=0.0.2, <0.0.3"
