Servo node takes degree values

--- a/pixi.toml
+++ b/pixi.toml
@@ -36,3 +36,4 @@ mpu6050-raspberrypi = ">=1.2, <2"
 mpu6050 = ">=0.0.3, <0.0.4"
 piicodev = ">=1.10.3, <2"
 mpu6050-pi = ">=0.0.2, <0.0.3"
+rpi-hardware-pwm = ">=0.3.0, <0.4"
