Robot testing to stop in front of picking bay then drive up. Time of flight added

--- a/pixi.toml
+++ b/pixi.toml
@@ -12,7 +12,7 @@ navigation = "ros2 run robot navigation"
 collection  = "ros2 run robot collection"
 mobility = "ros2 run robot mobility"
 test = "ros2 run robot test"
-
+pid = "ros2 run robot pid"
 
 [activation]
 scripts = ["install/setup.sh"]
